<resources>
    <string name="app_name" translatable="false">MobileOrderSystem</string>
    <string name="title_equipment">Equipment</string>
    <string name="title_order">Orders</string>
    <string name="add">Add</string>
    <string name="list">List</string>
    <string name="title_activity_login" translatable="false">Sign in</string>
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_home">Home</string>
    <string name="title_customer">Customers</string>

    <string name="email" translatable="false">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="create_account">Create account</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="reset_password">Change password</string>
    <string name="logout">Log out</string>
    <string name="delete_account">Delete account</string>
    <string name="settings">Account settings</string>
    <string name="alertDelete">Your account will be deleted. Are you sure you want to proceed?</string>
    <string name="newPasswordShow">New password</string>
    <string name="repeatPasswordShow">Repeat password</string>
    <string name="oldPasswordShow">Old password</string>
    <string name="save">Save</string>
    <string name="passwordChangeSucces">Password change has been successful</string>
    <string name="passwordChangeFail">There was an error while changing the password</string>
    <string name="name">Name</string>
    <string name="forgotPassword">Forgot password?</string>
    <string name="signIn">Sing in</string>
    <string name="signUp">Sign up</string>
    <string name="checkEmailTitle">Check your email account! </string>
    <string name="checkEmail">Verification email has been sent to your account </string>
    <string name="continueSignUp">Continue </string>
    <string name="notVerified">Email is not verified</string>

    <!-- create_customer strings -->
    <string name="cc_save">ADD</string>
    <string name="cc_name_hint_text">Name</string>
    <string name="cc_surname_hint_text">Surname</string>
    <string name="cc_company_hint_text">Company</string>
    <string name="cc_nip_hint_text">NIP</string>
    <string name="cc_email_hint_text" translatable="false">E-mail</string>
    <string name="cc_address_hint_text">Address</string>
    <string name="cc_telephone_hint_text">Telephone</string>
    <string name="cc_new_customer">New Customer</string>
    <string name="cc_edit_customer">Edit Customer</string>
    <string name="cc_save_edit">SAVE CHANGE</string>


    <!-- create_equipment strings -->
    <string name="ce_save">ADD</string>
    <string name="ce_price_hint_text">Price/day</string>
    <string name="ce_amount_hint_text">Amount</string>
    <string name="ce_name_hint_text">Name</string>
    <string name="ce_new_equipment">New Equipment</string>
    <string name="ce_edit_equipment">Edit Equipment</string>
    <string name="ce_save_edit">SAVE CHANGE</string>

    <!-- create_order strings -->
    <string name="co_new_order">New Order</string>
    <string name="co_name_hint_text">Order name</string>
    <string name="co_discount_hint_text">Discount %</string>
    <string name="co_save">DODAJ</string>

    <string name="adding_item">Adding item</string>
    <string name="add_button">Add</string>
    <string name="item_name">Item name</string>
    <string name="amount">Amount</string>
    <string name="price_day">Price/day</string>
    <string name="enter_name">Enter the name here</string>
    <string name="enter_amount">Enter the amount here</string>
    <string name="enter_price">Enter the price/day here</string>
    <string name="label_activeOrders">Active Orders</string>
    <string name="label_recent_orders">Recent Orders</string>
    <string name="email_hint_text" translatable="false">E-mail</string>
    <string name="name_hint_text">Name</string>
    <string name="signUptitle">SIGN UP</string>
    <string name="signIntitle">SIGN IN</string>
    <string name="password_hint_text">Password</string>
    <string name="dont_have_account">Don\'t have an account yet?</string>

    <string name="add_equipment_success">Equipment has been added!</string>
    <string name="failure">Error occurred!</string>
    <string name="not_available">Equipment not available!</string>
    <string name="order_name">Order name</string>
    <string name="items">Items</string>
    <string name="customer">Customer</string>
    <string name="rental_date">Rental date</string>
    <string name="return_date">Return date</string>
    <string name="discount">Discount %</string>
    <string name="sum_price">Order price</string>



    <string name="customer_name">Name</string>
    <string name="customer_surname">Surname</string>
    <string name="customer_company">Company name</string>
    <string name="customer_nip">NIP number</string>
    <string name="customer_email">Email</string>
    <string name="customer_address">Address</string>
    <string name="customer_telephone">Telephone</string>
    <string name="add_eq_fab_label">Add equipment</string>
    <string name="add_customer_fab_label">Add customer</string>
    <string name="add_order_fab_label">Add order</string>
    <string name="night_mode_switch_label">Night mode</string>
    <string name="toolbar_search">Search...</string>
    <string name="sort_title">Sort by</string>
    <string name="sort_by_name">Name</string>
    <string name="sort_by_price">Price</string>
    <string name="sort_by_amount">Amount</string>
    <string name="sort_by_amount_left">Amount Left</string>
    <string name="sort_by_rental_date">Rental date</string>
    <string name="sort_by_return_date">Return Date</string>
    <string name="sort_by_first_name">First name</string>
    <string name="sort_by_surname">Surname</string>

    <string name="delete">Delete</string>
    <string name="confirm">Are you sure you want to continue?</string>
    <string name="customer_with_order">Customer has at least one order</string>
    <string name="eq_with_order">Equipment is in at least one order</string>
</resources>
