<?xml version="1.0" encoding="utf-8"?>
<!--<android.support.v7.widget.Toolbar-->
<!--android:id="@+id/toolbar"-->
<!--xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--android:layout_width="match_parent"-->
<!--android:layout_height="50dp"-->
<!--android:orientation="vertical"-->
<!--android:background="@color/colorAccent">-->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        android:paddingTop="50dp">

        <Button
            android:id="@+id/signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:onClick="singUp"
            android:text="@string/signUp" />

        <TextView
            android:id="@+id/emailShow"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="0.5"
            android:text="@string/email" />

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/passwordShow"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="0.5"
            android:text="@string/prompt_password" />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="left"
            android:layout_weight="0.5"
            android:text="@string/forgotPassword" />

        <Button
            android:id="@+id/signIN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="0"
            android:backgroundTint="@color/colorPrimary"
            android:onClick="signIn"
            android:text="@string/signIn" />

    </LinearLayout>
</ScrollView>
    <!--</android.support.v7.widget.Toolbar>-->

