<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false"
    android:id="@+id/content">

    <LinearLayout
         android:layout_width="match_parent"
        android:layout_height="wrap_content" android:orientation="vertical"
        android:id="@+id/linearLayout"
        android:padding="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp" android:id="@+id/nameShow" android:layout_weight="0.5"
            android:text="@string/item_name"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/nameInput" android:layout_weight="0.15"
            />
        <TextView
            android:text="@string/amount"
            android:layout_width="match_parent"
            android:layout_height="30dp" android:id="@+id/amountShow" android:layout_weight="0"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/amountInput" android:layout_weight="0.25"/>
        <TextView
            android:text="@string/price_day"
            android:layout_width="match_parent"
            android:layout_height="30dp" android:id="@+id/priceShow" android:layout_weight="0.10"
            android:paddingTop="2dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/priceInput" android:layout_weight="0.25"/>

        <Button
            android:text="@string/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/save" android:layout_weight="0"
            android:layout_marginBottom="5dp" android:layout_marginTop="5dp"
            android:backgroundTint="@color/colorPrimary"/>

    </LinearLayout>
</ScrollView>


