<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/nameShow"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="0.5"
            android:text="@string/item_name" />

        <EditText
            android:id="@+id/nameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/amountShow"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="0"
            android:text="@string/amount" />

        <EditText
            android:id="@+id/amountInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/priceShow"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="0.10"
            android:paddingTop="2dp"
            android:text="@string/price_day" />

        <EditText
            android:id="@+id/priceInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:ems="10"
            android:inputType="text" />

        <Button
            android:id="@+id/save"
            android:onClick="save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="0"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/save" />

    </LinearLayout>
</ScrollView>


