<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorAccent"
        android:minHeight="?attr/actionBarSize">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signIn"
            android:textSize="18sp"
            android:textAllCaps="true"
          />
    </androidx.appcompat.widget.Toolbar>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_below="@id/toolbar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="-6dp"
        android:indeterminate="true"
        android:visibility="invisible"
        />
    <LinearLayout
        android:layout_below="@id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        android:paddingTop="50dp">

        <TextView
            android:id="@+id/emailShow"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="0.5"
            android:text="@string/oldPasswordShow" />

        <EditText
            android:id="@+id/oldPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="0.5"
            android:text="@string/newPasswordShow" />

        <EditText
            android:id="@+id/newPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/repeatPasswordShow"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="0"
            android:text="@string/repeat_password" />

        <EditText
            android:id="@+id/repeatPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/signIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="0"
            android:backgroundTint="@color/colorPrimary"
            android:onClick="savePassword"
            android:text="@string/save" />

    </LinearLayout>
    </RelativeLayout>
</ScrollView>


